--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!--
 Start coding from here
 -->
-  <div class="conatiner">
+  <div class="container">
 
     <h2 class="page-header" id="travel">Places Must Visit</h2>
 
@@ -89,6 +89,58 @@ Start coding from here
     </div>
   </center>
   </div>
+  <br><br>
+
+  <h2 class="page-header" id="movies">Review On The Movies</h2>
+
+  <div class="bg-primary movie_head" data-toggle="collapse" data-target="#avengers_endgame">
+    <span class="glyphicon glyphicon-film"></span>Avengers Endgame<i class="fa fa-sort-desc"></i>
+  </div>
+
+  <div id="avengers_endgame" class="collapse">
+
+    <div class="movie_text">
+      <img src="movie1.jpg" class="img-responsive img-thumbnail">
+      <h5 class="text-success text-capitalize">Excellent film to culminate MCU ride
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+      </h5>
+      <p>I watched it today with my kids and they loved it. You should have a minimal previous understanding of the
+        story, or you will miss 40% of the fun. You should watch Infinity War, Civil War, Black Panther, Age of Ultron,
+        Ant-Man and the Wasp before watching Avengers: Endgame. The entire movie pays homage to most of the other Marvel
+        superhero movies. You will enjoy it a lot. There is, at the beginning of the movie, a (spoiler alert) head
+        dismemberment that is quite impressive. The movie is based on the most-talked action-packed Sci-fi series. The
+        movie shows how the Avengers assemble once more in order to reverse Thanos' actions and restore balance to the
+        universe. The movie is lengthy, and it does run for 3 hours all worthwhile.</p>
+    </div>
+
+  </div>
+  <br>
+
+  <div class="bg-primary movie_head" data-toggle="collapse" data-target="#lion_king">
+    <span class="glyphicon glyphicon-film"></span>The Lion King<i class="fa fa-sort-desc"></i>
+  </div>
+
+  <div id="lion_king" class="collapse">
+
+    <div class="movie_text">
+      <img src="movie2.jpg" class="img-responsive img-thumbnail">
+      <h5 class="text-success text-capitalize">Excellent film to culminate the Walt Disney ride
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+        <span class="glyphicon glyphicon-star"></span>
+      </h5>
+      <p>  I took my kids to watch the movie and they loved it. The story shows how a young lion prince, after the murder
+        of his father, flees his kingdom only to learn the true meaning of responsibility and bravery. This movie is
+        worth a watch for its gorgeous visuals and cinematography. The music was phenomenal. Beyoncé really brought Nala
+        to live but the show stealers were Timon and Pumba. Kids would love it.</p>
+    </div>
+
+  </div>
+  <br>
 
 
 
